# fschess

./: Cargo.toml  Dioxus.toml
assets/: main.css  tailwind.css
docs/: index.html
docs/assets/: fschess-dxh19fc37ab20436267.js  fschess-dxh23ba1218fe8555a.js  fschess-dxh613c39fabffdc71.js  fschess-dxh7d1c7c6f3c559de4.js  fschess-dxhf48916e3e44e8eb7.js  fschess_bg-dxh74b34b3a1c90fddd.wasm  main-dxh8141351970f3654d.css  main-dxh83c066f61b8843d.css  main-dxhbaa048e4f4cf77f.css
public/: index.html
public/assets/: fschess-dxh23ba1218fe8555a.js  fschess-dxh3b1b631acc61dc77.js  fschess-dxh9b678524e8b7f8.js  fschess_bg-dxh19cee050655b5366.wasm  fschess_bg-dxh1ec0b8d0f77236ba.wasm  fschess_bg-dxhd1602744df513de.wasm  fschess_bg-dxhd5cc83e5492bf7bb.wasm  fschess_bg-dxhf36bf5fc60a9a7d.wasm  fschess_bg-dxhfa52d92f971ae9c4.wasm  main-dxh6b35676a32fde563.css  main-dxhac987a94b18b937e.css  main-dxhdd892d3e39cec357.css
src/: main.rs
