[package]
name = "fschess"
version = "0.1.0"
authors = ["Eduardo Mata Ewy <eddiemataewy@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = [] }
rand = { version = "0.10.0", features = []}
getrandom = { version = "0.4.2", features = ["wasm_js"] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
